--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Matt Kalina</title>
+    <title>Matt Kalina</title>
 
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="keywords" content="software,developer,engineer,vancouver,bc,canada,accounting,business,team,lead,manager,remote,spire,python,css,javascript,react,graphql,postgresql,html,html5,c++,general ledger,gl,journal">
-      <meta name="description" content="Software developer, Vancouver, Canada">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="software,developer,engineer,vancouver,bc,canada,accounting,business,team,lead,manager,remote,spire,python,css,javascript,i18n,react,graphql,postgresql,html,html5,c++,general ledger,gl,journal">
+    <meta name="description" content="Software developer, Vancouver, Canada">
 
-      <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-      <style>
-        body {
-          background-color: #eee;
-        }
-        a:link, a:visited {
-          color: #777;
-        }
-        a:hover {
-          color: blue;
-        }
-        #card {
-          background-color: #fff;
-          box-shadow: 1px 1px #ddd;
-          box-sizing: border-box;
-          height: 12em;
-          margin: 2em auto;
-          padding: 0.5em 0.8em;
-          width:  21.6em;
-        }
-        h1 {
-          font-family: 'PT Sans', sans-serif;
-          font-size: 2em;
-          font-weight: bold;
-        }
-        p {
-          font-family: Georgia, serif;
-          font-size: 1.2em;
-        }
-      </style>
-    </head>
-    <body>
-      <div id="card">
-        <h1>Matt Kalina</h1>
-        <p>Software developer and team lead<br>Vancouver, Canada</p>
-        <p>
-          <a href="https://github.com/mattkalina"><i class="fab fa-github"></i></a>
-          <a href="http://ca.linkedin.com/pub/matt-kalina/19/38a/240"><i class="fab fa-linkedin-in"></i></a>
-          <a href="mailto:mattkalina@gmail.com"><i class="far fa-envelope"></i></a>
-        </p>
-      </div>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <style>
+      body {
+        background-color: #eee;
+      }
+      a:link, a:visited {
+        color: #777;
+      }
+      a:hover {
+        color: blue;
+      }
+      #card {
+        background-color: #fff;
+        box-shadow: 1px 1px #ddd;
+        box-sizing: border-box;
+        height: 12em;
+        margin: 2em auto;
+        padding: 0.5em 0.8em;
+        width:  21.6em;
+      }
+      h1 {
+        font-family: 'PT Sans', sans-serif;
+        font-size: 2em;
+        font-weight: bold;
+      }
+      p {
+        font-family: Georgia, serif;
+        font-size: 1.2em;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="card">
+      <h1>Matt Kalina</h1>
+      <p>Software developer and team lead<br>Vancouver, Canada</p>
+      <p>
+        <a href="https://github.com/mattkalina"><i class="fab fa-github"></i></a>
+        <a href="http://ca.linkedin.com/pub/matt-kalina/19/38a/240"><i class="fab fa-linkedin-in"></i></a>
+        <a href="mailto:mattkalina@gmail.com"><i class="far fa-envelope"></i></a>
+      </p>
+    </div>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -64,4 +64,3 @@
     </script>
   </body>
 </html>
-
