--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Matt Kalina</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="software,developer,engineer,vancouver,bc,canada,accounting,business,team,lead,manager,remote,spire,python,css,javascript,i18n,react,graphql,postgresql,html,html5,c++,general ledger,gl,journal">
-    <meta name="description" content="Software developer, Vancouver, Canada">
+    <meta name="description" content="Software developer and team lead, Vancouver, Canada">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
