--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
         font-family: Georgia, serif;
         font-size: 1.2em;
       }
+      .links a {
+        margin-right: 0.5em;
+      }
     </style>
   </head>
   <body>
     <div id="card">
       <h1>Matt Kalina</h1>
       <p>Software developer and team lead<br>Vancouver, Canada</p>
-      <p>
+      <p class="links">
         <a href="https://github.com/mattkalina"><i class="fab fa-github"></i></a>
         <a href="http://ca.linkedin.com/pub/matt-kalina/19/38a/240"><i class="fab fa-linkedin-in"></i></a>
         <a href="mailto:mattkalina@gmail.com"><i class="far fa-envelope"></i></a>
